--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -99,7 +99,7 @@
   \textsc{Sept. 2015}--     & Department of Physics and Astronomy, UCLA    |   \textbf{towards Ph.D. in Astronomy and Astrophysics}   \\
   \textsc{Present}          & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, \\
                             & \hspace*{7.3em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-                            & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones}     \\
+                            & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones, Keren Sharon}     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2013}--     & Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics}   \\
